cluster/ci/config/route-docker-registry.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    docker-registry: default
  name: docker-registry
spec:
  host: registry.svc.ci.openshift.org
  port:
    targetPort: 5000-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: docker-registry
    weight: 100
  wildcardPolicy: None
